<resources>
    <string name="app_name">Costura Fácil</string>
    <string name="title_activity_cadastro_form">CadastroFormActivity</string>

    <string name="nome">Nome</string>
    <string name="cpf">CPF</string>
    <string name="nascimento">Data de Nascimento</string>
    <string name="celular">Celular</string>
    <string name="telFixo">Telefone Fixo</string>
    <string name="email">E-mail</string>
    <string name="logradouro">Logradouro</string>
    <string name="numero">Numero</string>
    <string name="bairro">Bairro</string>
    <string name="cep">CEP</string>
    <string name="cidade">Cidade</string>
    <string name="estado">Estado</string>
    <string name="senha">Senha</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_login">Login</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
