<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_cadastro_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="br.edu.utfpr.md.appcostura.CadastroFormActivity"
    tools:showIn="@layout/activity_cadastro_form">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    app:srcCompat="@mipmap/ic_launcher"
                    android:id="@+id/imageView"
                    android:layout_weight="1"
                    android:layout_height="100dp" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right">

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@android:drawable/ic_menu_gallery"
                        android:id="@+id/imageButton2"
                        android:onClick="actionCamera"
                        android:background="@android:drawable/screen_background_light_transparent" />

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@android:drawable/ic_menu_camera"
                        android:id="@+id/imageButton"
                        android:onClick="actionGallery"
                        android:background="@android:drawable/screen_background_light_transparent" />

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
                        android:id="@+id/imageButton3"
                        android:onClick="actionRemoverFoto"
                        android:background="@android:drawable/screen_background_light_transparent" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:text="@string/nome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtNome" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:ems="10"
                    android:id="@+id/edtNome"
                    android:hint="@string/nome" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:text="@string/cpf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtCpf" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/edtCpf" />

            <TextView
                android:text="@string/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtEmail" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/edtEmail" />

            <TextView
                android:text="@string/celular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtCelular" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:ems="10"
                android:id="@+id/edtCelular" />

            <TextView
                android:text="@string/telFixo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtFixo" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:ems="10"
                android:id="@+id/edtFixo" />

            <TextView
                android:text="Data de Nascimento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtNascimento" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:ems="10"
                android:id="@+id/edtNascimento" />

            <TextView
                android:text="Logradouro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtLogradouro" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="Name"
                android:ems="10"
                android:id="@+id/edtLogradouro" />

            <TextView
                android:text="Número"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtNumero" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/edtNumero" />

            <TextView
                android:text="Bairro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtBairro" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="Name"
                android:ems="10"
                android:id="@+id/edtBairro" />

            <TextView
                android:text="CEP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtCep" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPostalAddress"
                android:ems="10"
                android:id="@+id/edtCep" />

            <TextView
                android:text="Estado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtEstado" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="Name"
                android:ems="10"
                android:id="@+id/edtEstado" />

            <TextView
                android:text="Cidade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtCidade" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="Name"
                android:ems="10"
                android:id="@+id/edtCidade" />

            <TextView
                android:text="Senha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtSenha" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/edtSenha" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="LatLong" />

            <TextView
                android:id="@+id/txtLatLong"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
